TFP-2212 endringer i måten saldo regnes på. Bruker ikke startdato for arbeidsforhold, men ser heller på aktiviteter i uttaksperioden